# codeme

./: .env.template  README.md  compose.prod.yml  compose.yml
front/: .dockerignore  .gitignore  Dockerfile  README.md  next.config.js  package.json  protos.sh  tailwind.config.ts
front/.devcontainer/: devcontainer.json
front/messages/: en.json  es.json
front/public/: manifest.json  search-meta.json  sw.js
front/src/: middleware.ts
go-app/: .gitignore  Dockerfile  Makefile  go.mod  main.go
go-app/pb/: auth.pb.go  auth_grpc.pb.go  benchmark.pb.go  benchmark_grpc.pb.go  common.pb.go  docker.pb.go  docker_grpc.pb.go  user.pb.go
go-app/server/: bechmark.go
go-app/utils/: config.go
protos/: auth.proto  benchmark.proto  common.proto  directory.proto  docker.proto  user.proto
python-app/: .gitignore  Dockerfile  Makefile  main.py  reflection.py  requirements.txt
python-app/benchmark/: service.py
python-app/pb/: auth_pb2.py  auth_pb2.pyi  auth_pb2_grpc.py  benchmark_pb2.py  benchmark_pb2.pyi  benchmark_pb2_grpc.py  common_pb2.py  common_pb2.pyi  directory_pb2.py  directory_pb2.pyi  (+6 more)
rust-app/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  build.rs
rust-app/migrations/2023-11-30-195840_create_initial_tables/: up.sql
rust-app/migrations/2023-12-03-221701_create_initial_tables/: up.sql
rust-app/src/: lib.rs  main.rs  schema.rs
rust-app/src/interceptors/: auth.rs
rust-app/src/libs/: db.rs  jwt.rs
rust-app/src/models/: directory.rs  user.rs
rust-app/src/pb/: pb.rs
rust-app/src/services/: auth.rs  brenchmark.rs  directory.rs  docker.rs  mod.rs
(+86 files in other folders)
