[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.1.0", features = ["postgres", "r2d2", "uuid"] }
uuid = { version = "1.6.1", features = ["v4"] }
tonic = "0.10.2"
prost = "0.12.3"
tonic-reflection = "0.10.2"
prost-types = "0.12.3"
tokio = { version = "1.34.0", features = ["macros", "rt-multi-thread", "sync"] }
tokio-stream = "0.1.14"
async-stream = "0.3.5"

[build-dependencies]
tonic-build = { version = "0.10.2", features = ["prost"] }
